--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "serve": "^11.2.0",
     "swiper": "^5.2.0",
     "vue": "^2.5.2",
-    "vue-router": "^3.1.3"
+    "vue-router": "^3.1.3",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
